--- a/mainpage.html
+++ b/mainpage.html
@@ -101,39 +101,39 @@
     </ul>
     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown""">Accessories<span class="caret"></span></button>
 <ul class="dropdown-menu" role="menu">
-      <li><a href="#">Tablet</a></li>
-      <li><a href="#">Smartphone</a></li>
+      <li><a href="#">Table</a></li>
+      <li><a href="#">phone</a></li>
     </ul>
     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown""">Utilities<span class="caret"></span></button>
 <ul class="dropdown-menu" role="menu">
-      <li><a href="#">Tablet</a></li>
-      <li><a href="#">Smartphone</a></li>
+      <li><a href="#">let</a></li>
+      <li><a href="#">Smartone</a></li>
     </ul>
 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown""">Database<span class="caret"></span></button>
 <ul class="dropdown-menu" role="menu">
-      <li><a href="#">Tablet</a></li>
-      <li><a href="#">Smartphone</a></li>
+      <li><a href="#">Tab</a></li>
+      <li><a href="#">Smare</a></li>
     </ul>
     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown""">Activity Manager<span class="caret"></span></button>
 <ul class="dropdown-menu" role="menu">
-      <li><a href="#">Tablet</a></li>
-      <li><a href="#">Smartphone</a></li>
+      <li><a href="#">T</a></li>
+      <li><a href="#">Se</a></li>
     </ul>
    
     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown""">Scroll Register<span class="caret"></span></button>
 <ul class="dropdown-menu" role="menu">
-      <li><a href="#">Tablet</a></li>
-      <li><a href="#">Smartphone</a></li>
+      <li><a href="#">able</a></li>
+      <li><a href="#">artphone</a></li>
     </ul>
     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown""">Reports<span class="caret"></span></button>
 <ul class="dropdown-menu" role="menu">
       <li><a href="#">Tablet</a></li>
-      <li><a href="#">Smartphone</a></li>
+      <li><a href="#">Smphone</a></li>
     </ul>
 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown""">Transactions<span class="caret"></span></button>
 <ul class="dropdown-menu" role="menu">
-      <li><a href="#">Tablet</a></li>
-      <li><a href="#">Smartphone</a></li>
+      <li><a href="#">let</a></li>
+      <li><a href="#">Smae</a></li>
     </ul>
     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown""">Borrowings<span class="caret"></span></button>
 <ul class="dropdown-menu" role="menu">
